feat: added new methods for details and changed signature of methods for update of Service and Product